Fixed overflow issue

--- a/files/style/user.less
+++ b/files/style/user.less
@@ -163,6 +163,8 @@
 
 @media only screen and (max-width: 800px) {
 	#tplUser .userHeadline {
+		overflow: visible;
+		
 		> .invisible {
 			display: block;
 			float: left;
